# basic-rs

./: .gitignore  .travis.yml  Cargo.toml  README.md
benches/: bench.rs
src/: lib.rs  main.rs  quads.rs
